--- a/BeerCatch/package.json
+++ b/BeerCatch/package.json
@@ -25,13 +25,18 @@
     "react-native": "0.63.3",
     "react-native-action-button": "^2.8.5",
     "react-native-animatable": "^1.3.3",
+    "react-native-autogrow-textinput": "^5.4.0",
     "react-native-camera": "^3.40.0",
     "react-native-dynamic-search-bar": "^2.0.0",
     "react-native-effects-view": "^0.4.0",
     "react-native-flags": "^1.0.0",
+    "react-native-focus-scroll": "0.0.4",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-header-scroll-view": "^0.10.3",
+    "react-native-image-picker": "^2.3.4",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-md-textinput": "^2.0.4",
+    "react-native-modal": "^11.5.6",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-ratings": "^7.3.0",
     "react-native-reanimated": "^1.13.1",
